# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-check.yml
brain_games/: cli.py  engine.py
brain_games/games/: game_calc.py  game_core.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games_pac/: engine.py
brain_games_pac/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games_pac/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
