[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "brain games"
authors = ["AlexStolbov <stolbov_alexey@mail.ru>"]
repository = "https://github.com/AlexStolbov/python-project-lvl1"
packages = [
    { include = "brain_games_pac" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
brain-games = "brain_games_pac.scripts.brain_games:main"
brain-even = "brain_games_pac.scripts.brain_even:main"
brain-calc = "brain_games_pac.scripts.brain_calc:main"
brain-gcd = "brain_games_pac.scripts.brain_gcd:main"
brain-progression = "brain_games_pac.scripts.brain_progression:main"
brain-prime = "brain_games_pac.scripts.brain_prime:main"